--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.web.resources.static-locations=classpath:/static/, classpath:/templates/
 
 #????
 spring.datasource.driverClassName =com.mysql.cj.jdbc.Driver
-spring.datasource.url = jdbc:mysql://114.132.125.15:3307/DeliverySystem?useSSL=true&characterEncoding=utf8
+spring.datasource.url = jdbc:mysql://114.132.125.15:3307/takeoutApp?useSSL=true&characterEncoding=utf8
 spring.datasource.username = root
 spring.datasource.password = 123456
 
@@ -23,6 +23,8 @@ spring.datasource.password = 123456
 mybatis.mapper-locations: classpath:mapper/*.xml
 mybatis.type-aliases-package: com.cykj.bean
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+
 
 
 
